--- a/rectangle_detect/rectangle_detect.vcxproj.filters
+++ b/rectangle_detect/rectangle_detect.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\ImageProcessor.cpp">
+    <ClCompile Include="new_detect.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\new_Canny.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\demo.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="new_detect.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
